
http://onehouronelife.com/updateLog.php


NOTE:
As part of this week's update process, check bigserver2 logs post-restart as
part of:  https://github.com/jasonrohrer/OneLife/issues/510

Check again after the next update (v309)



Server Fixes

--Fixed baby and leader arrows and messages to make the coordinates birth-pos
  relative (no more new babies born 7000 meters away).



Version 309   2020-February-8

--Fixed incorrect path start when path finding fails and retries.  Fixes #525

--When a new offspring baby is born (other than your own), your character
  exclaims the situation verbally (only you can see the exclamation) and a
  60-second map-style pointer is created to the offspring baby.  Part of #523

--When a new offspring baby is born, all of your existing family members have
  +FAMILY+ above their heads as a reminder of who affects your gene score.
  Part of #523

--Saying /FAM command produces +FAMILY+ reminders above the heads of genetic
  family members.  Part of #523

--Pause screen (hit ESC) has full list of chat commands.

--Support for ~~ to indicate half-line skip in multi-line on-screen messages.
  Using this for command list spacing.

--When a follower receives an order, they get a temporary LEAD arrow back to
  the leader who issued the order.

--Trying to fix baby overload after server restart.  Max ratio of baby to
  adults now >= 2.0 (was > 2.0).  Max ratio of baby to fertile moms now >= 3.0
  (was > 4.0).

--When a leader issues an order, they get a temporary SUPP arrow back to their
  closest follower.

--When issuing an order, the leader sees +FOLLOWER+ markers above the heads of
  nearby followers.

--If your mother has no leader, you automatically follow her at birth to
  bootstrap leadership.  Part of #532

--CURSE MY BABY now works forever, until you have another baby.  Part of #529

--In a low-pop case (one fertile mom), avoid getting born to mothers that you
  have cursed, and don't go to d-town if that lone mother has you cursed.